[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/interface/hud/building_popups/BuildingPopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/interface/hud/building_popups/InvestmentPopup.gd" type="Script" id=2]




[node name="InvestmentPopup" instance=ExtResource( 1 )]
size_flags_vertical = 9
script = ExtResource( 2 )

[node name="VBoxContainer" parent="CenterContainer" index="0"]
margin_top = 15.0
margin_bottom = 119.0

[node name="Separator4" type="HSeparator" parent="CenterContainer/VBoxContainer" index="9"]
margin_right = 40.0
margin_bottom = 4.0

[node name="InvestButton" type="Button" parent="CenterContainer/VBoxContainer" index="10"]
margin_right = 32.0
margin_bottom = 18.0
text = "Invest"
[connection signal="about_to_show" from="." to="." method="_on_InvestmentPopup_about_to_show"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/InvestButton" to="." method="_on_InvestButton_pressed"]
